--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="hero-title">The Breakthrough Programme<br>A-Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
         <ul class="hero-proof-list">
           <li class="hero-proof-item">
-            <span class="hero-guarantee-banner">Achieve +1 grade in 3 months and earn 100% money back.</span>
+            <span class="text-mulberry">Achieve +1 grade in 3 months and earn 100% money back.</span>
           </li>
           <li class="hero-proof-item"><span class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</span></li>
           <li class="hero-proof-item"><span class="trust-hook">4×A* | Imperial College Computing (AI) |<br>Ranked Top 100 in the UK for CS A-Level</span></li>
@@ -63,7 +63,7 @@
             </figure>
 
             <div class="cta">
-              <a class="btn-primary" data-consult-link href="https://calendly.com/csprime/consult" target="_blank" rel="noopener noreferrer" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+              <a class="btn-primary" data-consult-link href="https://calendly.com/csprime/consult" target="_blank" rel="noopener noreferrer" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book Consultation</a>
               <div class="cta-sub">Free • 20 min</div>
             </div>
           </div>
@@ -72,7 +72,7 @@
             <aside class="cta-offer" aria-label="Special offer details">
               <div class="cta-offer__body">
                 <p class="cta-offer__eyebrow">SPECIAL OFFER – 99% OFF</p>
-                <p class="cta-offer__copy">Book your free consult within 24hrs to get the <span class="text-mulberry">£100 Diagnostic for £1 only.</span></p>
+                <p class="cta-offer__copy">Book your free consultation within 24hrs to get the <span class="text-mulberry">£100 Diagnostic for £1 only.</span></p>
               </div>
               <div class="cta-offer__timer" aria-hidden="true"></div>
             </aside>
@@ -172,7 +172,7 @@
             <li>Attend all lessons (1 reschedule per month allowed, no cancellations)<br>and all meetings</li>
           </ul>
           <p>Show discipline, make progress, and you will finish stronger. For free.</p>
-          <p><strong>Book Consult</strong> to start. It takes little time, no commitment, and could lead to your best results yet.</p>
+          <p><strong>Book Consultation</strong> to start. It takes little time, no commitment, and could lead to your best results yet.</p>
         </article>
       </div>
     </section>
@@ -202,9 +202,7 @@
                   <li>offering bespoke home practice sets targeting her specific problems,</li>
                   <li>providing extra support between lessons when homework became challenging,</li>
                   <li>applying exam techniques used by top 1% students drilled into muscle memory,</li>
-                  <li>maintaining parent communication with under <strong>15-minute DM</strong> response time, Monday to Sunday, 8am-8pm.</li>
                 </ul>
-                <p>These are standard CS Prime practices applied to every student, not experimental methods. And these are only a few examples of the full range of support and systems we offer.</p>
                 <div class="case-story__carousel" data-carousel aria-roledescription="carousel">
                   <button class="case-story__carousel-nav case-story__carousel-nav--prev" type="button" data-carousel-prev aria-label="Previous example">
                     <span aria-hidden="true">‹</span>
@@ -235,10 +233,10 @@
                 <h3 class="case-story__section-title">The Finale</h3>
                 <p>After three weeks, the results started to show: <strong>+10%</strong> on the average score. Confidence followed. Answers became structured, timing steadier, corrections rarer.</p>
                 <p>We pushed into full papers, mixed-topic rotations, and calm repeatability. By week eight, timed scripts held at <strong>78%</strong>. June arrived. A-levels finished. The <strong>C</strong> became a <strong>strong A</strong>.</p>
-                <p>Parents had clarity. She had control. The dream university was back within reach.</p>
-                <p>Want the same? <strong>Book Consult</strong>.</p>
+                <p>Parents had clarity. She had control. The offer was secured.</p>
+                <p>Want the same? <strong>Book Consultation</strong>.</p>
                 <p>It takes little time, no commitment, and is free of charge — the first step towards getting to your prime. We will get a baseline, build the plan, and drive to A*.</p>
-                <p><em>P.S. This case shows only our well known methods (techniques include: tracing substitution, mid-code debugging, explicit data typing, ...). Our top 0.1% advantages are proprietary to CS Prime Academy and exclusive to clients. You cannot find them anywhere else.</em></p>
+                <p><em>P.S. These are standard CS Prime practices applied to every student, not experimental methods. This case only shows our well known methods. Our top 0.1% advantages are exclusive to our clients only.</em></p>
               </div>
             </div>
             <button class="case-story__toggle" type="button" data-story-toggle aria-expanded="false" aria-controls="classic-story-body">
@@ -290,7 +288,7 @@
   </main>
 
   <footer class="floating-cta" aria-live="polite" aria-label="Book a consult">
-    <a class="btn-primary" data-consult-link href="https://calendly.com/csprime/consult" target="_blank" rel="noopener noreferrer" data-gtag-event="book_consult_click">Book consult</a>
+    <a class="btn-primary" data-consult-link href="https://calendly.com/csprime/consult" target="_blank" rel="noopener noreferrer" data-gtag-event="book_consult_click">Book Consultation</a>
   </footer>
 
   <script src="/assets/app.js" defer></script>
